# tcc-plugins

./: .gitignore  README.md  tcc-plugins.nppws  tmake.btm
hashmap/: CMakeLists.txt  README.md  TODO.txt  build.bat  project.btm
hashmap/src/: TakeCmd.h  hashmap.c  hashmap.rc  pch.h  resource.h  tcchashmap.c
hashmap/test/: .gitignore  basictest.btm  hash-udf.btm  hashfiletest.btm
project/hashmap/: hashmap.vcxproj  hashmap.vcxproj.filters
project/tcc-plugins/: tcc-plugins.sln
swizzle/: .gitignore  CMakeLists.txt  TCC-Swizzle.sln  TCC-Swizzle.vcxproj  TCC-Swizzle.vcxproj.filters  project.btm  swizzle-pch.cpp  swizzle-pch.h  swizzle.c  swizzle.cpp  swizzle.def  tmake.btm
swizzle/lib/: TakeCmd.def  TakeCmd.exp
swizzle/notes/: CL-and-Link-Command-Lines.md
swizzle/src/: TakeCmd.h  functions.c  pch.c  pch.h  swizzle.c  swizzle.h
tcc-sdk-template/: Command_Variables  Commands  DelphiDemo.dpr  Internal_Variables  PlugIn.cpp  PlugIn.h  PlugIn.rc  PlugIn.sln  PlugIn.vcxproj  PlugIn.vcxproj.filters  Resource.h  TakeCmd.h  TakeCmd.lib  Variable_Functions  plugin.def
